<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="all_task">All Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="history">History</string>
    <string name="task_basket">Task Basket</string>
    <string name="term_of_use">Terms of use</string>
    <string name="instruction_to_use">Instruction to Use</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="tasks" translatable="false">Tasks</string>
    <string name="work">Work</string>
    <string name="_05_05_2020">05.05.2020</string>
    <string name="shahzodbek_atabayev">Shahzodbek Atabayev</string>
    <string name="task_importance_degree">Task Importance Degree</string>
    <string name="task_time">Task Time</string>
    <string name="_21_00">21:00</string>
    <string name="done">Done</string>
    <string name="canceled">Canceled</string>
    <string name="todo">TODO</string>
    <string name="important">important</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="new_">New</string>
    <string name="outdated">Outdated</string>
    <string name="very_important">very important</string>
    <string name="more_important">more important</string>
    <string name="not_so_important">not so important</string>
    <string name="task_name">Task Name </string>
    <string name="task_info_">Task Description</string>
    <string name="task_date_">Task Date</string>
    <string name="task_time_">Task Time</string>
    <string name="to_do_work">To do work</string>
    <string name="_09_05_2020">09.05.2020</string>
    <string name="_16_06">16:06</string>
    <string name="info">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="_12_32">12:32</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="edit">edit</string>
    <string name="Edit">Edit</string>
    <string name="delete">delete</string>
    <string name="restore">Restore</string>
    <string name="title_splash">Planning daily activities is now easy</string>
    <string name="version">Version 1.0.0</string>
    <string name="choose_image">Choose Image</string>
    <string name="fullname">fullName</string>
    <string name="edit_full_name">Edit Full Name</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="welcome">Welcome!!!</string>
    <string name="daily_work">Having trouble planning your daily routine?</string>
    <string name="save_time">Save your time. Everything is easy with our app</string>
    <string name="availability">Availability</string>
    <string name="simplicity">Convenience and simplicity</string>
    <string name="easier_to_plan">It makes it easier to plan daily activities and remember them whenever you want</string>
    <string name="next">next</string>
    <string name="change_language">Change language</string>
    <string name="uzbekcha" translatable="false">Uzbekcha</string>
    <string name="uzb_krill" translatable="false">Узбекча</string>
    <string name="russion" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="confirm">Confirm</string>
    <string name="soon">Soon!!!</string>
    <string name="day">day</string>
    <string name="toast1">Please. Enter task name!!!</string>
    <string name="toast2">Please. Enter task info!!!</string>
    <string name="toast3">Please. Enter task date!!!</string>
    <string name="toast4">Please. Enter task time!!!</string>
    <string name="finish">finish</string>
    <string name="tapTarget1">Add task Button</string>
    <string name="tapTarget1.2">Tap this to create a new task.</string>
    <string name="tapTarget2">Menu Button</string>
    <string name="tapTarget2_1" >Tap this to open menu.</string>

</resources>
