<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edit_text"
    android:padding="16dp">

    <TextView
        android:id="@+id/taskDialogName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:drawableStart="@drawable/ic_title"
        android:drawablePadding="6dp"
        android:maxEms="10"
        android:maxLines="2"
        android:text="@string/work"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/buttonCloseDialog"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskDialogName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/info"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/scroll"
        app:layout_constraintStart_toStartOf="@id/scroll"
        app:layout_constraintTop_toBottomOf="@id/taskDialogName" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconInfo">

        <TextView
            android:id="@+id/taskDialogInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|start"
            android:text="@string/to_do_work"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />
    </ScrollView>

    <ImageView
        android:id="@+id/iconInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down_arrow"
        app:layout_constraintStart_toStartOf="@id/scroll"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toTopOf="@id/scroll"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/taskDialogDate"
        app:layout_constraintStart_toStartOf="@id/taskDialogDate"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

    <TextView
        android:id="@+id/taskDialogDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_interface"
        android:drawablePadding="6dp"
        android:text="@string/_05_05_2020"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/scroll"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/taskDialogTime"
        app:layout_constraintTop_toTopOf="@id/text2" />

    <TextView
        android:id="@+id/taskDialogTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_clock"
        android:drawablePadding="6dp"
        android:text="@string/_12_32"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/taskDialogDate"
        app:layout_constraintTop_toTopOf="@id/taskDialogDate" />

    <TextView
        android:id="@+id/taskDialogTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_timer"
        android:drawablePadding="6dp"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDialogDate" />

    <TextView
        android:id="@+id/taskDialogDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_degree2"
        android:padding="6dp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
