<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/buttonRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorCheckLanguage"
            android:padding="8dp"
            android:tag="uz"
            android:text="@string/uzbekcha"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorCheckLanguage"
            android:padding="8dp"
            android:tag="uz-krill"
            android:text="@string/uzb_krill"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorCheckLanguage"
            android:padding="8dp"
            android:tag="ru"
            android:text="@string/russion"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/colorCheckLanguage"
            android:padding="8dp"
            android:tag="en"
            android:text="@string/english"
            android:textSize="16sp" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonConfirmCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintLeft_toLeftOf="@id/buttonRadioGroup"
        app:layout_constraintRight_toRightOf="@id/buttonRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/buttonRadioGroup">

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonConfirmCard"
        />
</androidx.constraintlayout.widget.ConstraintLayout>