<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/edit_task"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_check1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/buttonBackEditDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/to_do_work"
            android:src="@drawable/ic_arrow_back1" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textColor="#5A5555"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/editLayout"
                app:layout_constraintStart_toStartOf="@id/editLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textColorHint="#80736D6D"
                app:layout_constraintEnd_toEndOf="@id/line2"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/work"
                    android:maxLength="20"
                    android:padding="16dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_info_"
                android:textColor="#5A5555"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/editLayout2"
                app:layout_constraintStart_toStartOf="@id/editLayout2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textColorHint="#80736D6D"
                app:layout_constraintEnd_toEndOf="@id/line2"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toBottomOf="@id/editLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTaskInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/to_do_work"
                    android:padding="16dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/line2"
                    app:layout_constraintStart_toStartOf="@id/line1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_date_"
                android:textColor="#5A5555"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/editLayout3"
                app:layout_constraintStart_toStartOf="@id/editLayout3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="#80736D6D"
                app:layout_constraintEnd_toStartOf="@id/editLayout4"
                app:layout_constraintHorizontal_weight="0.6"
                app:layout_constraintStart_toStartOf="@id/line1"
                app:layout_constraintTop_toBottomOf="@id/editLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTaskDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableEnd="@drawable/ic_interface"
                    android:focusable="false"
                    android:hint="@string/_09_05_2020"
                    android:inputType="date"
                    android:padding="16dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_time_"
                android:textColor="#5A5555"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/editLayout4"
                app:layout_constraintStart_toStartOf="@id/editLayout4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="#80736D6D"
                app:layout_constraintBottom_toBottomOf="@id/editLayout3"
                app:layout_constraintEnd_toEndOf="@id/line2"
                app:layout_constraintHorizontal_weight="0.4"
                app:layout_constraintStart_toEndOf="@id/editLayout3"
                app:layout_constraintTop_toTopOf="@id/editLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTaskTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableEnd="@drawable/ic_clock"
                    android:focusable="false"
                    android:hint="@string/_16_06"
                    android:inputType="time"
                    android:padding="16dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/editTaskDegree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clipToPadding="true"
                android:layoutMode="opticalBounds"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/line2"
                app:layout_constraintStart_toStartOf="@+id/line1"
                app:layout_constraintTop_toBottomOf="@id/editLayout3"
                tools:listitem="@layout/layout_spinner" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
